--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <button id="visc">Start Camera</button>
+  <button id="visc">Show Camera</button>
   <button id="switchCameraButton">Switch Camera</button>
 
   <div class="block"></div>
